syntax = "proto3";

message TestMessage {
    string error = 1;
}